Add pt-BR translations and fix Mongoid error keys

--- a/config/locales/config/locales/config/locales/pt-BR.yml
+++ b/config/locales/config/locales/config/locales/pt-BR.yml
@@ -42,6 +42,6 @@ pt-BR:
           message_title: "Documento não encontrado"
           summary_title: "Resumo"
           resolution_title: "Resolução"
-          message: "Não foi possível encontrar o documento para o(s) id(s) fornecido(s): %{ids}."
-          summary: "Ao tentar encontrar o documento da classe %{klass} com o(s) id(s) %{ids}, o Mongoid não o(s) encontrou no banco de dados."
-          resolution: "Verifique se o(s) id(s) %{ids} está(ão) correto(s) e se o documento realmente existe no banco de dados. Você pode verificar os documentos existentes no banco de dados com %{klass}.all."
+          message: "Não foi possível encontrar o documento para o(s) id(s) fornecido(s): %{values}."
+          summary: "Ao tentar encontrar o documento da classe %{klass} com o(s) id(s) %{values}, o Mongoid não o(s) encontrou no banco de dados."
+          resolution: "Verifique se o(s) id(s) %{values} está(ão) correto(s) e se o documento realmente existe no banco de dados. Você pode verificar os documentos existentes no banco de dados com %{klass}.all."
